--- a/main.css
+++ b/main.css
@@ -1,3 +1,4 @@
+/*0.02*/
 html, body, div, span, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 abbr, address, cite, code,
@@ -172,13 +173,14 @@ h1 {
     margin: auto;
     background: #FFFFFF;
     border-radius: 80px;  
-    top: -570px;
+    top: 130px;
+    text-align: center;
 }
 
 .icon6 {
     position: relative;
     top: -100px;
-    left: 590px;     
+    left: 290px;     
 }
 
 .icon7 {
@@ -197,7 +199,7 @@ h1 {
 .icon9 {
     position: relative;
     top: -90px;
-    left: 30px;
+    left: -290px;
 }
 
 p {
@@ -215,12 +217,12 @@ p {
     margin: auto;
     background: #FFFFFF;
     border-radius: 80px;  
-    top: -515px;
+    top: 190px;
 }
 
 #herenselect select {
     position: relative;
-    top: -59px;
+    top: -82px;
     left: 50%px;
     font-family: 'Montserrat', serif;
     width: 750px;
@@ -230,11 +232,14 @@ p {
     display: none;
     border-color: #ffffff;
     text-align-last: center;
+    font-family: 'Montserrat', serif;
+    font-size: 40px;
+    font-weight: 800;
 }
 
 #damesselect select {
     position: relative;
-    top: -81px;
+    top: -82px;
     left: 50%px;
     font-family: 'Montserrat', serif;
     width: 750px;
@@ -244,6 +249,9 @@ p {
     display: none;
     border-color: #ffffff;
     text-align-last: center;
+    font-family: 'Montserrat', serif;
+    font-size: 40px;
+    font-weight: 800;
 }
 #kinderenselect select {
     position: relative;
@@ -257,6 +265,9 @@ p {
     display: none;
     border-color: #ffffff;
     text-align-last: center;
+    font-family: 'Montserrat', serif;
+    font-size: 40px;
+    font-weight: 800;
 }
 
 .heren {
@@ -269,6 +280,7 @@ p {
     left: -80px;
     border: 0;
     
+    
     }
 
 #voorkeurskapper select {
@@ -276,14 +288,14 @@ p {
     top: 0px;
     left: 50%px;
     font-family: 'Montserrat', serif;
+    font-size: 40px;
+    font-weight: 800;
     width: 750px;
     height: 90px;
     border-radius: 80px;
-    font-size: 40px;
     display: initial;
     border-color: #ffffff;
     text-align-last: center;
-    font-weight: 800;
 }
 
 
@@ -307,8 +319,8 @@ p {
     margin: auto;
     background: #F97070;
     border-radius: 80px;  
-    top: -400px;
-    left: 575px;
+    top: 290px;
+    left: 55px;
     border: none;
     text-align: center;
     font-family: 'Montserrat', serif;
@@ -317,3 +329,283 @@ p {
     font-size: 40px;
 }
 
+#dbheren *{
+    font-family: 'Montserrat', serif;
+    font-size: 10px;
+    font-weight: 800;
+    text-align-last: center;
+}
+
+#dbdames *{
+    font-family: 'Montserrat', serif;
+    font-size: 10px;
+    font-weight: 800;
+    text-align-last: center;
+}
+
+#dbkinderen *{
+    font-family: 'Montserrat', serif;
+    font-size: 10px;
+    font-weight: 800;
+    text-align-last: center;
+}
+
+#voorkeurskapper1 *{
+    font-family: 'Montserrat', serif;
+    font-size: 10px;
+    font-weight: 800;
+    text-align-last: center;
+}
+
+select::-ms-expand {
+    display: none;
+}
+
+#damesselect:after {
+    content: '<>';
+    font: 17px "Consolas", monospace;
+    color: #333;
+    -webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    transform: rotate(90deg);
+    right: 11px;
+}
+
+#ekapper1 {
+    display: none;
+}
+#ekapper2 {
+    display: none;
+}
+#ekapper3 {
+    display: none;
+}
+#ekapper4 {
+    display: none;
+}
+#ekapper5 {
+    display: none;
+}
+#ekapper6 {
+    display: none;
+}
+#ekapper7 {
+    display: none;
+}
+#ekapper8 {
+    display: none;
+}
+#ekapper9 {
+    display: none;
+}
+#ekapper10 {
+    display: none;
+}
+#ekapper11 {
+    display: none;
+}
+#ekapper12 {
+    display: none;
+}
+#ekapper13 {
+    display: none;
+}
+#ekapper14 {
+    display: none;
+}
+#ekapper15 {
+    display: none;
+}
+#ekapper16 {
+    display: none;
+}
+#ekapper17 {
+    display: none;
+}
+#ekapper18 {
+    display: none;
+}
+
+#e101 {
+    display: none;
+}
+#e102 {
+    display: none;
+}
+#e103 {
+    display: none;
+}
+#e104 {
+    display: none;
+}
+#e105 {
+    display: none;
+}
+#e106 {
+    display: none;
+}
+#e107 {
+    display: none;
+}
+#e108 {
+    display: none;
+}
+#e109 {
+    display: none;
+}
+#e110 {
+    display: none;
+}
+#e111 {
+    display: none;
+}
+#e112 {
+    display: none;
+}
+#e113 {
+    display: none;
+}
+#e114 {
+    display: none;
+}
+#e115 {
+    display: none;
+}
+#e116 {
+    display: none;
+}
+#e117 {
+    display: none;
+}
+#e118 {
+    display: none;
+}
+#e119 {
+    display: none;
+}
+#e120 {
+    display: none;
+}
+
+#e201 {
+    display: none;
+}
+#e202 {
+    display: none;
+}
+#e203 {
+    display: none;
+}
+#e204 {
+    display: none;
+}
+#e205 {
+    display: none;
+}
+#e206 {
+    display: none;
+}
+#e207 {
+    display: none;
+}
+#e208 {
+    display: none;
+}
+#e209 {
+    display: none;
+}
+#e210 {
+    display: none;
+}
+#e211 {
+    display: none;
+}
+#e212 {
+    display: none;
+}
+#e213 {
+    display: none;
+}
+#e214 {
+    display: none;
+}
+#e215 {
+    display: none;
+}
+#e216 {
+    display: none;
+}
+#e217 {
+    display: none;
+}
+#e218 {
+    display: none;
+}
+#e219 {
+    display: none;
+}
+#e220 {
+    display: none;
+}
+
+#e301 {
+    display: none;
+}
+#e302 {
+    display: none;
+}
+#e303 {
+    display: none;
+}
+#e304 {
+    display: none;
+}
+#e305 {
+    display: none;
+}
+#e306 {
+    display: none;
+}
+#e307 {
+    display: none;
+}
+#e308 {
+    display: none;
+}
+#e309 {
+    display: none;
+}
+#e310 {
+    display: none;
+}
+#e311 {
+    display: none;
+}
+#e312 {
+    display: none;
+}
+#e313 {
+    display: none;
+}
+#e314 {
+    display: none;
+}
+#e315 {
+    display: none;
+}
+#e316 {
+    display: none;
+}
+#e317 {
+    display: none;
+}
+#e318 {
+    display: none;
+}
+#e319 {
+    display: none;
+}
+#e320 {
+    display: none;
+}
