--- a/choose/stylesheetch.css
+++ b/choose/stylesheetch.css
@@ -18,8 +18,10 @@ h3 {
     color: #FFFFFF;
     font-family: 'Montserrat', serif;
     font-style: ExtraBold;
-    font-size:30px;
+    font-size:29px;
     margin-top: -10px;
+    margin-left: 10px;
+    margin-right: 10px;
 
 }
 
@@ -32,7 +34,7 @@ h3 {
     border-radius: 80px;    
 }
 
-#button {
+.button {
     position: relative;
     width: 220px;
     height: 70px;
@@ -54,11 +56,11 @@ h3 {
 #maak_de_afspraak_compleet {
     position: relative;
     width: 700px;
-    height: 70px;
+    height: 90px;
     margin: auto;
     background: #1AE2A4;
     border-radius: 80px;  
-    top: 25px;
+    top: -5px;
     left: 40px;
     border: none;
     text-align: center;
